# vn1-sales-forecast

./: .gitignore  .~lock.20241113 VN1 Forecasting Challenge.pdf#  pyproject.toml  requirements.txt
src/vn1_sales_forecast/: settings.py
src/vn1_sales_forecast/pipelines/divine_model/: nodes.py
src/vn1_sales_forecast/pipelines/model_ml_direct/: nodes.py  pipeline.py
